Added unified dependency list
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@54261 13f79535-47bb-0310-9956-ffa450edef68

--- a/project.properties
+++ b/project.properties
@@ -19,7 +19,20 @@
 # the directory containing the geronimo website in CVS
 
 geronimo.cvs.docdir = ../incubator-site/build/site/projects/geronimo
-maven.repo.remote=http://dist.codehaus.org, http://www.mortbay.org/maven, http://www.ibiblio.org/maven
+maven.repo.remote=\
+http://www.apache.org/~jboynes,\
+http://www.apache.org/~chirino/maven,\
+http://www.apache.org/~djencks/maven,\
+http://www.apache.org/~jlaskowski/maven,\
+http://www.apache.org/~dims/maven,\
+http://cvs.apache.org/repository,\
+http://dist.codehaus.org,\
+http://www.apache.org/dist/java-repository/,\
+http://www.mortbay.org/maven,\
+http://www.openejb.org/maven,\
+http://www.ibiblio.org/maven
+
+
 module.excludes=axis
 #maven.test.failure.ignore=true
 #maven.test.skip=true
