--- a/project.properties
+++ b/project.properties
@@ -32,7 +32,7 @@ http://www.openejb.org/maven,\
 http://www.ibiblio.org/maven,\
 http://www.apache.org/~dims/maven/
 
-module.excludes=axis
+#module.excludes=axis
 #maven.test.failure.ignore=true
 #maven.test.skip=true
 #maven.itest.skip=true
