Module structure changed for activemq.
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@54708 13f79535-47bb-0310-9956-ffa450edef68

--- a/project.properties
+++ b/project.properties
@@ -45,7 +45,7 @@ specs/*/project.xml,\
 openejb/modules/*/project.xml,\
 applications/*/project.xml,\
 modules/*/project.xml,\
-activemq/project.xml,\
+activemq/modules/core/project.xml,\
 activemq/modules/ra/project.xml,\
 howl/logger/project.xml,\
 tranql/*/project.xml
