Added required properties for jar publishing
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@54710 13f79535-47bb-0310-9956-ffa450edef68

--- a/project.properties
+++ b/project.properties
@@ -67,3 +67,9 @@ geronimo.activemq.cvs.access=${geronimo.otherproject.cvs.access}
 geronimo.howl.cvs.access=${geronimo.otherproject.cvs.access}
 geronimo.openejb.cvs.access=${geronimo.otherproject.cvs.access}
 geronimo.tranql.cvs.access=${geronimo.otherproject.cvs.access}
+
+maven.username=${user.name}
+maven.repo.central=apache.org
+maven.repo.central.directory=/www/cvs.apache.org/repository
+
+
