Updated maven plugin builds to install a plugin jar into the local repo Added all plugins into the main build since they are need by sub projects
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@54797 13f79535-47bb-0310-9956-ffa450edef68

--- a/project.properties
+++ b/project.properties
@@ -40,7 +40,7 @@ maven.remote.group=apcvs
 
 #multiproject properties
 maven.multiproject.includes=\
-plugins/maven-xmlbeans-plugin/project.xml,\
+plugins/*/project.xml,\
 specs/*/project.xml,\
 openejb/modules/*/project.xml,\
 applications/*/project.xml,\
