Updated to use new activemq jars.  jgroups dependency not needed.
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@54983 13f79535-47bb-0310-9956-ffa450edef68

--- a/project.properties
+++ b/project.properties
@@ -46,7 +46,9 @@ openejb/modules/*/project.xml,\
 applications/*/project.xml,\
 modules/*/project.xml,\
 activemq/modules/core/project.xml,\
+activemq/modules/gbean/project.xml,\
 activemq/modules/ra/project.xml,\
+activemq/stores/jdbm/project.xml,\
 howl/logger/project.xml,\
 tranql/*/project.xml
 
