move howl repo to openejb.org
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@55570 13f79535-47bb-0310-9956-ffa450edef68

--- a/modules/transaction/project.properties
+++ b/modules/transaction/project.properties
@@ -2,4 +2,4 @@
 ## $Rev$ $Date$
 ##
 
-maven.repo.remote=http://www.openejb.org/maven, http://www.apache.org/~djencks/maven, http://www.ibiblio.org/maven
+maven.repo.remote=http://www.openejb.org/maven, http://www.ibiblio.org/maven
