--- a/project.properties
+++ b/project.properties
@@ -31,7 +31,7 @@ geronimo.cvs.docdir = ../incubator-site/build/site/projects/geronimo
 #http://www.ibiblio.org/maven,\
 #http://www.apache.org/~dims/maven/
 
-module.excludes=axis
+#module.excludes=axis
 #maven.test.failure.ignore=true
 #maven.test.skip=true
 #maven.itest.skip=true
@@ -53,7 +53,6 @@ tranql/*/project.xml
 
 maven.multiproject.excludes=\
 modules/tomcat/project.xml,\
-modules/axis/project.xml,\
 itests/*/project.xml,\
 openejb/modules/connector/project.xml,\
 openejb/modules/webadmin/project.xml
