--- a/modules/client-builder/project.properties
+++ b/modules/client-builder/project.properties
@@ -4,4 +4,5 @@
 
 maven.repo.remote=http://www.openejb.org/maven, http://www.ibiblio.org/maven
 
+maven.eclipse.classpath.include=target/xmlbeans
 maven.idea.generated.source=xmlbeans
