--- a/modules/deployment/project.properties
+++ b/modules/deployment/project.properties
@@ -6,3 +6,4 @@
 maven.eclipse.classpath.include=target/xmlbeans
 
 maven.idea.generated.source=xmlbeans
+maven.jar.manifest=${basedir}/src/conf/manifest.mf
