--- a/modules/jetty/src/test-resources/deployables/war3/WEB-INF/web.xml
+++ b/modules/jetty/src/test-resources/deployables/war3/WEB-INF/web.xml
@@ -38,6 +38,7 @@
         </web-resource-collection>
         <auth-constraint>
             <role-name>content-administrator</role-name>
+            <role-name>auto-administrator</role-name>
         </auth-constraint>
     </security-constraint>
 
@@ -60,6 +61,10 @@
 
     <security-role>
         <role-name>content-administrator</role-name>
+    </security-role>
+
+    <security-role>
+        <role-name>auto-administrator</role-name>
     </security-role>
 
     <ejb-ref>
