Initial work on security.  More to come some other time.
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@76044 13f79535-47bb-0310-9956-ffa450edef68

--- a/modules/security/src/test-data/data/login.config
+++ b/modules/security/src/test-data/data/login.config
@@ -3,48 +3,41 @@
  */
 
 FOO {
-    org.apache.geronimo.security.jaas.RemoteLoginModule required
-    debug=true
-    uri="async://localhost:4242"
-    realm="properties-realm"
-    kernel="test.kernel";
+    org.apache.geronimo.security.jaas.JaasLoginCoordinator required
+    host="localhost"
+    port="4242"
+    realm="properties-realm";
 };
 
 kerberos {
-    org.apache.geronimo.security.jaas.RemoteLoginModule required
-    debug=true
-    uri="async://localhost:4242"
-    realm="TOOLAZYDOGS.COM"
-    kernel="test.kernel";
+    org.apache.geronimo.security.jaas.JaasLoginCoordinator required
+    host="localhost"
+    port="4242"
+    realm="TOOLAZYDOGS.COM";
 };
 
 sql {
-    org.apache.geronimo.security.jaas.RemoteLoginModule required
-    debug=true
-    uri="async://localhost:4242"
-    realm="sql-realm"
-    kernel="test.kernel";
+    org.apache.geronimo.security.jaas.JaasLoginCoordinator required
+    host="localhost"
+    port="4242"
+    realm="sql-realm";
 };
 
 properties {
-    org.apache.geronimo.security.jaas.RemoteLoginModule required
-    debug=true
-    uri="async://localhost:4242"
-    realm="properties-realm"
-    kernel="test.kernel";
+    org.apache.geronimo.security.jaas.JaasLoginCoordinator required
+    host="localhost"
+    port="4242"
+    realm="properties-realm";
 };
 
 kerberos-local {
-    org.apache.geronimo.security.jaas.LocalLoginModule required
-    debug=true
+    org.apache.geronimo.security.jaas.JaasLoginCoordinator required
     realm="TOOLAZYDOGS.COM"
     kernel="test.kernel";
 };
 
 bridge {
-    org.apache.geronimo.security.jaas.LocalLoginModule required
-    debug=true
+    org.apache.geronimo.security.jaas.JaasLoginCoordinator required
     realm="bridge-realm"
     kernel="test.kernel";
 };
-
