--- a/modules/jetty/src/test-resources/data/login.config
+++ b/modules/jetty/src/test-resources/data/login.config
@@ -1,9 +1,5 @@
-
 jaasTest {
-    org.apache.geronimo.security.jaas.LocalLoginModule required
-    debug=true
+    org.apache.geronimo.security.jaas.JaasLoginCoordinator required
     realm="demo-properties-realm"
     kernel="geronimo.kernel";
 };
-
-
