My repo is not used any longer
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@106356 13f79535-47bb-0310-9956-ffa450edef68

--- a/modules/assembly/project.properties
+++ b/modules/assembly/project.properties
@@ -5,4 +5,4 @@
 # the directory containing the geronimo website in CVS
 
 geronimo.cvs.docdir = ../incubator-site/build/site/projects/geronimo
-maven.repo.remote=http://www.apache.org/~jlaskowski/maven, http://www.mortbay.org/maven, http://www.openejb.org/maven, http://www.apache.org/~djencks/maven, http://dist.codehaus.org, http://www.ibiblio.org/maven 
+maven.repo.remote=http://www.apache.org/~jlaskowski/maven, http://www.mortbay.org/maven, http://www.openejb.org/maven, http://dist.codehaus.org, http://www.ibiblio.org/maven 
