The codehaus repo was missing.  The openejb itest module was not downloading.
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@106936 13f79535-47bb-0310-9956-ffa450edef68

--- a/itests/client/project.properties
+++ b/itests/client/project.properties
@@ -2,7 +2,7 @@
 ## $Revision: 1.10 $ $Date: 2004/09/24 07:18:55 $
 ##
 
-maven.repo.remote=http://www.openejb.org/maven, http://www.ibiblio.org/maven
+maven.repo.remote=http://www.openejb.org/maven, http://www.ibiblio.org/maven, http://dist.codehaus.org
 
 maven.multiproject.type=ejb
 
