--- a/modules/axis/project.properties
+++ b/modules/axis/project.properties
@@ -4,7 +4,7 @@
 
 # the directory containing the geronimo website in CVS
 
-maven.repo.remote=http://dist.codehaus.org, http://www.ibiblio.org/maven, http://ws.apache.org/~dims/maven
+maven.repo.remote=http://dist.codehaus.org, http://www.ibiblio.org/maven, http://cvs.apache.org/repository
 
 maven.junit.jvmargs=-Djava.security.auth.login.config=src/test-resources/data/login.config
 maven.junit.fork=true
