--- a/modules/derby/project.properties
+++ b/modules/derby/project.properties
@@ -2,4 +2,4 @@
 ## $Rev: 47137 $ $Date: 2004-09-24 00:04:29 -0700 (Fri, 24 Sep 2004) $
 ##
 
-maven.repo.remote=http://minotaur.apache.org/~jboynes
+maven.repo.remote=http://cvs.apache.org/repository
