use latest jetty
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@122698 13f79535-47bb-0310-9956-ffa450edef68

--- a/etc/project.properties
+++ b/etc/project.properties
@@ -132,7 +132,7 @@ javacc_version=2.1
 jaxb_ri_version=SNAPSHOT
 jdbm_version=0.20-dev
 jelly_velocity_tags_version=SNAPSHOT
-jetty_version=5.1.2-G-7-12-2004
+jetty_version=5.1.2-SNAPSHOT
 jgroups_version=2.2.5
 jmock_version=1.0.1
 jrms_version=1.1
