--- a/etc/project.properties
+++ b/etc/project.properties
@@ -68,6 +68,7 @@ geronimo_kernel_version=1.0-SNAPSHOT
 geronimo_system_version=1.0-SNAPSHOT
 
 # actual dependencies
+activeio_version=1.0-SNAPSHOT
 activemq_version=1.3-SNAPSHOT
 geronimo_version=1.0-SNAPSHOT
 openejb_version=2.0-SNAPSHOT
