--- a/etc/project.properties
+++ b/etc/project.properties
@@ -75,7 +75,7 @@ openejb_version=2.0-SNAPSHOT
 tranql_version=1.0-SNAPSHOT
 tranql_connector_version=1.0-SNAPSHOT
 
-geronimo_spec_activation_version=1.0.2-rc3
+geronimo_spec_activation_version=1.0.2-SNAPSHOT
 geronimo_spec_ejb_version=2.1-rc3
 geronimo_spec_j2ee_version=1.4-rc3
 geronimo_spec_j2ee_connector_version=1.5-rc3
