--- a/etc/project.properties
+++ b/etc/project.properties
@@ -149,9 +149,12 @@ oro_version=2.0.8
 p2psockets_version=1.1.2
 regexp_version=1.3
 spring_version=1.0.1
+stax_version=1.1.1-dev
+stax_api_version=1.0
 tomcat_version=5.5.4
 velocity_version=1.4-rc1
 xerces_version=2.6.2
+xfire_version=20041222
 xml_apis_version=1.0.b2
 xml_resolver_version=1.1
 xml_parser_apis_version=2.2.1
@@ -159,6 +162,7 @@ xmlbeans_version=1.0-DEV
 xmlpull_version=1.1.3.4d_b4_min
 xstream_version=1.0.2
 xpp3_version=1.1.3.3
+wsdl4j_version=1.4
 
 #####################################################
 # Site Colors
