Deploy with runtime deployer unless property geronimo.assemble.offline=true. Clean by default. Remove logs before assembling by default.
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@125373 13f79535-47bb-0310-9956-ffa450edef68

--- a/modules/assembly/project.properties
+++ b/modules/assembly/project.properties
@@ -6,3 +6,14 @@
 
 geronimo.cvs.docdir = ../incubator-site/build/site/projects/geronimo
 maven.repo.remote=http://www.apache.org/~jlaskowski/maven, http://www.mortbay.org/maven, http://www.openejb.org/maven, http://dist.codehaus.org, http://www.ibiblio.org/maven 
+
+# Uncomment this line to use the deployer offline.
+# This is slower and doesn't check that the runtime deployer works,
+# but doesn't start jetty, openejb, etc.
+#geronimo.assemble.offline=true
+
+# Controls whether the logs generated during assembly are removed before packaging
+geronimo.assemble.delete.logs=true
+
+#controls whether to remove previous versions even if clean was not explicitly called
+geronimo.assemble.clean=true
