Reving up to ActiveMQ 2.0
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@125660 13f79535-47bb-0310-9956-ffa450edef68

--- a/modules/axis-builder/project.properties
+++ b/modules/axis-builder/project.properties
@@ -4,8 +4,8 @@
 
 maven.repo.remote=http://www.openejb.org/maven, http://www.ibiblio.org/maven
 
-maven.eclipse.classpath.include=target/xmlbeans
-maven.idea.generated.source=xmlbeans
+#maven.eclipse.classpath.include=target/xmlbeans
+#maven.idea.generated.source=xmlbeans
 
 maven.junit.sysproperties=geronimo.run.external.webservicetest
 #Set to true to run test against bea's web service interop server.
