enable assertions in forked tests, fix failures that result
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@151530 13f79535-47bb-0310-9956-ffa450edef68

--- a/modules/connector/project.properties
+++ b/modules/connector/project.properties
@@ -9,4 +9,4 @@ maven.repo.remote=http://dist.codehaus.org, http://www.ibiblio.org/maven
 # Include the generated xmlbean classes in the eclipse classpath
 maven.junit.fork=true
 
-maven.junit.jvmargs=-Djava.security.auth.login.config=src/test-data/data/login.config
+maven.junit.jvmargs=-Djava.security.auth.login.config=src/test-data/data/login.config -ea
