--- a/modules/jetty/project.properties
+++ b/modules/jetty/project.properties
@@ -6,5 +6,5 @@
 
 maven.repo.remote=http://www.apache.org/~jboynes, http://www.mortbay.org/maven, http://www.openejb.org/maven, http://dist.codehaus.org, http://www.ibiblio.org/maven, http://www.apache.org/dist/java-repository/
 
-maven.junit.jvmargs=-Djava.security.auth.login.config=src/test-resources/data/login.config
+maven.junit.jvmargs=-Djava.security.auth.login.config=src/test-resources/data/login.config -ea
 maven.junit.fork=true
