--- a/modules/security/project.properties
+++ b/modules/security/project.properties
@@ -20,5 +20,5 @@
 ##
 
 maven.repo.remote=http://www.openejb.org/maven, http://www.ibiblio.org/maven
-maven.junit.jvmargs=-Djava.security.auth.login.config=src/test-data/data/login.config -Dlog4j.configuration=file:log4j.properties
+maven.junit.jvmargs=-Djava.security.auth.login.config=src/test-data/data/login.config -Dlog4j.configuration=file:log4j.properties -ea
 maven.junit.fork=true
