--- a/modules/system/project.properties
+++ b/modules/system/project.properties
@@ -19,5 +19,5 @@
 ## $Rev$ $Date$
 ##
 
-maven.junit.jvmargs=-Djava.io.tmpdir=target/tmp
+maven.junit.jvmargs=-Djava.io.tmpdir=target/tmp -ea
 maven.junit.fork=true
