--- a/modules/axis/project.properties
+++ b/modules/axis/project.properties
@@ -6,7 +6,7 @@
 
 maven.repo.remote=http://dist.codehaus.org, http://www.ibiblio.org/maven, http://cvs.apache.org/repository
 
-maven.junit.jvmargs=-Djava.security.auth.login.config=src/test-resources/data/login.config
+maven.junit.jvmargs=-Djava.security.auth.login.config=src/test-resources/data/login.config -ea
 maven.junit.fork=true
 maven.compile.optimize=false
 maven.compile.fork=true
