--- a/modules/connector-builder/project.properties
+++ b/modules/connector-builder/project.properties
@@ -10,6 +10,6 @@ maven.repo.remote=http://dist.codehaus.org, http://www.ibiblio.org/maven
 maven.eclipse.classpath.include=target/xmlbeans
 maven.junit.fork=true
 
-maven.junit.jvmargs=-Djava.security.auth.login.config=src/test-data/data/login.config
+maven.junit.jvmargs=-Djava.security.auth.login.config=src/test-data/data/login.config -ea
 
 maven.idea.generated.source=xmlbeans
