Removed reference to the login module since its handled by the geronimo container
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@151584 13f79535-47bb-0310-9956-ffa450edef68

--- a/modules/tomcat/project.properties
+++ b/modules/tomcat/project.properties
@@ -3,5 +3,5 @@
 ##
 
 maven.repo.remote=http://www.apache.org/~jlaskowski/maven, http://www.ibiblio.org/maven
-maven.junit.jvmargs=-Djava.endorsed.dirs=${maven.build.dir}/endorsed -Djava.security.auth.login.config=src/test-resources/data/login.config -ea
+maven.junit.jvmargs=-Djava.endorsed.dirs=${maven.build.dir}/endorsed -ea 
 maven.junit.fork=true
