--- a/etc/project.properties
+++ b/etc/project.properties
@@ -137,6 +137,7 @@ jetty_version=5.1.2-SNAPSHOT
 jgroups_version=2.2.5
 jmock_version=1.0.1
 jrms_version=1.1
+juddi_version=SNAPSHOT
 junit_version=3.8.1
 jxta_version=2.0
 log4j_version=1.2.8
@@ -148,6 +149,7 @@ openorb_version=1.4.0-GERONIMO
 oro_version=2.0.8
 p2psockets_version=1.1.2
 regexp_version=1.3
+scout_version=1.0-SNAPSHOT
 spring_artifact=spring
 spring_version=1.1.3
 stax_version=1.1.1-dev
