--- a/etc/project.properties
+++ b/etc/project.properties
@@ -84,10 +84,13 @@ geronimo_spec_j2ee_jacc_version=1.0-rc3
 geronimo_spec_j2ee_management_version=1.0-rc3
 geronimo_spec_javamail_version=1.3.1-SNAPSHOT
 geronimo_spec_jaxr_version=1.0-rc3
+geronimo_spec_jaxrpc_version=1.1-rc3
 geronimo_spec_jms_version=1.1-rc3
 geronimo_spec_jsp_version=2.0-rc3
 geronimo_spec_jta_version=1.0.1B-rc3
+geronimo_spec_saaj_version=1.1-rc3
 geronimo_spec_servlet_version=2.4-rc3
+geronimo_spec_qname_version=1.1-rc3
 
 activecluster_version=1.0-SNAPSHOT
 activemq_jetty_version=4.2.20RC0
