Speculative handler impl for service refs, some work on fault/exception mapping
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@153302 13f79535-47bb-0310-9956-ffa450edef68

--- a/project.properties
+++ b/project.properties
@@ -44,20 +44,26 @@ specs/*/project.xml,\
 openejb/modules/*/project.xml,\
 applications/*/project.xml,\
 modules/*/project.xml,\
-activemq/modules/core/project.xml,\
-activemq/modules/gbean/project.xml,\
-activemq/modules/ra/project.xml,\
-activemq/stores/jdbm/project.xml,\
-howl/logger/project.xml,\
-tranql/*/project.xml
+tranql/*/project.xml,
+#itests/naming/client/project.xml,\
+#itests/naming/common/project.xml,\
+#itests/naming/ejb/project.xml,\
+#itests/naming/war/project.xml
+#activemq/modules/*/project.xml,\
+#activemq/transports/*/project.xml,\
+#activemq/stores/*/project.xml,
+
+#howl/logger/project.xml,\
 
 maven.multiproject.excludes=\
-itests/*/project.xml,\
 openejb/modules/connector/project.xml,\
-openejb/modules/webadmin/project.xml
+openejb/modules/webadmin/project.xml,\
+activemq/modules/*/project.xml,\
+sandbox/*/project.xml
+#itests/*/project.xml,\
 
 maven.idea.project.multiproject.includes=${maven.multiproject.includes}
-maven.idea.project.multiproject.excludes=sandbox/*/project.xml
+maven.idea.project.multiproject.excludes=${maven.multiproject.excludes}
 
 #if you are a committer on all these projects use e.g. -Dgeronimo.otherproject.cvs.access=:ext:djencks
 #if you are a committer on one of these projects set the appropriate property here or on the command line.
