--- a/modules/assembly/project.properties
+++ b/modules/assembly/project.properties
@@ -17,3 +17,4 @@ geronimo.assemble.delete.logs=true
 
 #controls whether to remove previous versions even if clean was not explicitly called
 geronimo.assemble.clean=true
+#geronimo.assemble.minimal=true
