--- a/modules/axis-builder/project.properties
+++ b/modules/axis-builder/project.properties
@@ -2,7 +2,7 @@
 ## $Rev: 46019 $ $Date: 2004-09-14 02:56:06 -0700 (Tue, 14 Sep 2004) $
 ##
 
-maven.repo.remote=http://www.openejb.org/maven, http://www.ibiblio.org/maven
+maven.repo.remote=http://cvs.apache.org/repository, http://www.openejb.org/maven, http://www.ibiblio.org/maven
 
 #maven.eclipse.classpath.include=target/xmlbeans
 #maven.idea.generated.source=xmlbeans
