--- a/modules/timer/project.properties
+++ b/modules/timer/project.properties
@@ -2,4 +2,4 @@
 ## $Rev$ $Date$
 ##
 
-maven.repo.remote=http://www.apache.org/~djencks/maven, http://www.ibiblio.org/maven
+maven.repo.remote=http://www.apache.org/~djencks/maven, http://www.ibiblio.org/maven, http://cvs.apache.org/repository/
