switching to Axis 1.2-RC3
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@153671 13f79535-47bb-0310-9956-ffa450edef68

--- a/etc/project.properties
+++ b/etc/project.properties
@@ -97,10 +97,10 @@ activemq_jetty_version=4.2.20RC0
 ant_version=1.5
 antlr_version=2.7.2
 axion_version=1.0-M3-dev
-axis_version=SNAPSHOT
-axis_jaxrpc_version=1.2-RC1
-axis_saaj_version=1.2-RC1
-axis_wsdl4j_version=1.2-RC1
+axis_version=1.2-RC3
+axis_jaxrpc_version=1.2-RC3
+axis_saaj_version=1.2-RC3
+axis_wsdl4j_version=1.2-RC3
 axis_commons_discovery_version=SNAPSHOT
 avalon_framework_version=4.1.4
 avalon_logkit_version=1.2.2
