--- a/itests/naming/war/src/webapp/WEB-INF/web.xml
+++ b/itests/naming/war/src/webapp/WEB-INF/web.xml
@@ -10,11 +10,17 @@
         <url-pattern>/</url-pattern>
     </servlet-mapping>
 
-    <service-ref>
-        <service-ref-name>service/InteropLab</service-ref-name>
-        <service-interface>org.apache.notgeronimo.itests.naming.common.webservice.interop.InteropLab</service-interface>
-        <wsdl-file>WEB-INF/wsdl/interop.wsdl</wsdl-file>
-        <jaxrpc-mapping-file>WEB-INF/wsdl/interop-jaxrpcmapping.xml</jaxrpc-mapping-file>
-        <service-qname xmlns:interop="http://tempuri.org/4s4c/1/3/wsdl/def/interopLab">interop:interopLab</service-qname>
-    </service-ref>
+<!--    <service-ref>-->
+<!--        <service-ref-name>service/InteropLab</service-ref-name>-->
+<!--        <service-interface>org.apache.notgeronimo.itests.naming.common.webservice.interop.InteropLab</service-interface>-->
+<!--        <wsdl-file>WEB-INF/wsdl/interop.wsdl</wsdl-file>-->
+<!--        <jaxrpc-mapping-file>WEB-INF/wsdl/interop-jaxrpcmapping.xml</jaxrpc-mapping-file>-->
+<!--        <service-qname xmlns:interop="http://tempuri.org/4s4c/1/3/wsdl/def/interopLab">interop:interopLab</service-qname>-->
+<!--    </service-ref>-->
+    <ejb-ref>
+        <ejb-ref-name>ejb/mgmt/MEJB</ejb-ref-name>
+        <ejb-ref-type>Session</ejb-ref-type>
+        <home>javax.management.j2ee.ManagementHome</home>
+        <remote>javax.management.j2ee.Management</remote>
+    </ejb-ref>
 </web-app>
