--- a/modules/deploy-tool/project.properties
+++ b/modules/deploy-tool/project.properties
@@ -1,4 +1,5 @@
 ##
 ## $Rev: 46019 $ $Date: 2004-09-14 02:56:06 -0700 (Tue, 14 Sep 2004) $
 ##
+maven.repo.remote=http://www.openejb.org/maven, http://www.ibiblio.org/maven
 maven.jar.manifest=${basedir}/src/conf/manifest.mf
