--- a/modules/axis/project.properties
+++ b/modules/axis/project.properties
@@ -4,7 +4,7 @@
 
 # the directory containing the geronimo website in CVS
 
-maven.repo.remote=http://dist.codehaus.org, http://www.ibiblio.org/maven, http://cvs.apache.org/repository
+maven.repo.remote=http://dist.codehaus.org, http://www.ibiblio.org/maven, http://cvs.apache.org/repository,http://openejb.codehaus.org/maven/
 
 maven.junit.jvmargs=-Djava.security.auth.login.config=src/test-resources/data/login.config -ea
 maven.junit.fork=true
