--- a/etc/project.properties
+++ b/etc/project.properties
@@ -97,7 +97,7 @@ activemq_jetty_version=4.2.20RC0
 ant_version=1.5
 antlr_version=2.7.2
 axion_version=1.0-M3-dev
-axis_version=1.2-RC3
+axis_version=1.2-PATCH1
 axis_jaxrpc_version=1.2-RC3
 axis_saaj_version=1.2-RC3
 axis_wsdl4j_version=1.2-RC3
