--- a/etc/project.properties
+++ b/etc/project.properties
@@ -72,6 +72,7 @@ activeio_version=1.0-SNAPSHOT
 activemq_version=3.0-SNAPSHOT
 geronimo_version=1.0-SNAPSHOT
 openejb_version=2.0-SNAPSHOT
+tmporb_version=1.0-SNAPSHOT
 tranql_version=1.0-SNAPSHOT
 tranql_connector_version=1.0-SNAPSHOT
 
