--- a/etc/project.properties
+++ b/etc/project.properties
@@ -137,7 +137,7 @@ javacc_version=2.1
 jaxb_ri_version=SNAPSHOT
 jdbm_version=0.20-dev
 jelly_velocity_tags_version=SNAPSHOT
-jetty_version=5.1.2-SNAPSHOT
+jetty_version=5.1.3rc2
 jgroups_version=2.2.5
 jmock_version=1.0.1
 jrms_version=1.1
