--- a/etc/project.properties
+++ b/etc/project.properties
@@ -136,7 +136,7 @@ jasper_version=5.5.7
 javacc_version=2.1
 jaxb_ri_version=SNAPSHOT
 jdbm_version=0.20-dev
-jelly_velocity_tags_version=SNAPSHOT
+jelly_velocity_tags_version=1.0
 jetty_version=5.1.3rc2
 jgroups_version=2.2.5
 jmock_version=1.0.1
@@ -159,7 +159,7 @@ spring_version=1.1.3
 stax_version=1.1.1-dev
 stax_api_version=1.0
 tomcat_version=5.5.7
-velocity_version=1.4-rc1
+velocity_version=1.4
 xerces_version=2.6.2
 xfire_version=20050202
 xml_apis_version=1.0.b2
