Convert remainin openorb references to tmporb
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@158645 13f79535-47bb-0310-9956-ffa450edef68

--- a/project.properties
+++ b/project.properties
@@ -44,6 +44,7 @@ specs/*/project.xml,\
 openejb/modules/*/project.xml,\
 applications/*/project.xml,\
 modules/*/project.xml,\
+tmporb/modules/*/project.xml,\
 tranql/*/project.xml,
 #itests/naming/client/project.xml,\
 #itests/naming/common/project.xml,\
