--- a/etc/project.properties
+++ b/etc/project.properties
@@ -31,7 +31,7 @@ maven.remote.group=apcvs
 
 maven.compile.source=1.4
 maven.compile.target=1.4
-maven.compile.deprecation=true
+#maven.compile.deprecation=true
 maven.compile.debug=true
 maven.compile.optimize=true
 
