--- a/etc/project.properties
+++ b/etc/project.properties
@@ -77,6 +77,7 @@ tranql_version=1.0-SNAPSHOT
 tranql_connector_version=1.0-SNAPSHOT
 
 geronimo_spec_activation_version=1.0.2-SNAPSHOT
+geronimo_spec_corba_version=2.3-rc4
 geronimo_spec_ejb_version=2.1-rc4
 geronimo_spec_j2ee_version=1.4-rc4
 geronimo_spec_j2ee_connector_version=1.5-rc4
