move to earlier creation of req/resp wrappers so they are available for jacc purposes
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@159321 13f79535-47bb-0310-9956-ffa450edef68

--- a/modules/jetty/project.properties
+++ b/modules/jetty/project.properties
@@ -2,7 +2,7 @@
 ## $Rev$ $Date$
 ##
 
-# the directory containing the geronimo website in CVS
+maven.repo.remote=http://www.mortbay.org/maven, http://www.openejb.org/maven, http://www.ibiblio.org/maven
 
 maven.junit.jvmargs=-Djava.security.auth.login.config=src/test-resources/data/login.config -ea
 maven.junit.fork=true
