Removed reliance on tmporb-ssl
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@159345 13f79535-47bb-0310-9956-ffa450edef68

--- a/specs/corba/build.xml
+++ b/specs/corba/build.xml
@@ -46,7 +46,10 @@
             <arg value="TimeBase"/>
             <arg value="${pkg.prefix}"/>
             <arg value="-pkgPrefix"/>
-            <arg value="SecurityService"/>
+            <arg value="Security"/>
+            <arg value="${pkg.prefix}"/>
+            <arg value="-pkgPrefix"/>
+            <arg value="SSLIOP"/>
             <arg value="${pkg.prefix}"/>
             <arg value="-pkgPrefix"/>
             <arg value="CosTransactions"/>
