Pull commons-modeler from cvs.apache.org
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@159594 13f79535-47bb-0310-9956-ffa450edef68

--- a/modules/tomcat/project.properties
+++ b/modules/tomcat/project.properties
@@ -2,6 +2,6 @@
 ## $Rev: 46019 $ $Date: 2004-09-14 11:56:06 +0200 (Tue, 14 Sep 2004) $
 ##
 
-maven.repo.remote=http://www.apache.org/~jlaskowski/maven, http://www.ibiblio.org/maven
+maven.repo.remote=http://cvs.apache.org/repository, http://www.ibiblio.org/maven
 maven.junit.jvmargs=-Djava.endorsed.dirs=${maven.build.dir}/endorsed -ea 
 maven.junit.fork=true
