--- a/configs/geronimo-gbean-deployer/project.properties
+++ b/configs/geronimo-gbean-deployer/project.properties
@@ -20,9 +20,9 @@
 ##
 
 # use personal repo at Apache until we are prepared to release this
-maven.repo.remote= http://cvs.apache.org/~jboynes, http://www.ibiblio.org/maven
+maven.repo.remote=http://people.apache.org/~jboynes, http://www.ibiblio.org/maven
 
 # override deploymentConfig to use bootstrap configuration
-geronimo.packaging.deploymentConfig=geronimo/cars/geronimo-gbean-deployer-0.1.car
+geronimo.packaging.deploymentConfig=geronimo/cars/geronimo-gbean-deployer-159811.car
 
-geronimo_version=1.0-SNAPSHOT
+geronimo_version=159810
