--- a/configs/geronimo-gbean-deployer/project.properties
+++ b/configs/geronimo-gbean-deployer/project.properties
@@ -23,6 +23,6 @@
 maven.repo.remote=http://people.apache.org/~jboynes, http://www.ibiblio.org/maven
 
 # override deploymentConfig to use bootstrap configuration
-geronimo.packaging.deploymentConfig=geronimo/cars/geronimo-gbean-deployer-159811.car
+geronimo.packaging.deploymentConfig=geronimo/cars/geronimo-gbean-deployer-0.1.1.car
 
 geronimo_version=159810
