--- a/plugins/geronimo-packaging-plugin/project.properties
+++ b/plugins/geronimo-packaging-plugin/project.properties
@@ -21,3 +21,7 @@
 
 maven.compile.source=1.4
 maven.compile.target=1.4
+
+# use personal repo at Apache until we are prepared to release this
+maven.repo.remote=http://people.apache.org/~jboynes, http://www.ibiblio.org/maven
+
