--- a/etc/project.properties
+++ b/etc/project.properties
@@ -102,7 +102,7 @@ axion_version=1.0-M3-dev
 axis_version=PATCH3
 axis_jaxrpc_version=1.2-RC3
 axis_saaj_version=1.2-RC3
-axis_wsdl4j_version=1.2-RC3
+#axis_wsdl4j_version=1.2-RC3
 axis_commons_discovery_version=SNAPSHOT
 avalon_framework_version=4.1.4
 avalon_logkit_version=1.2.2
@@ -160,6 +160,7 @@ stax_version=1.1.1-dev
 stax_api_version=1.0
 tomcat_version=5.5.7
 velocity_version=1.4
+wsdl4j_version=1.5
 xerces_version=2.6.2
 xfire_version=20050202
 xml_apis_version=1.0.b2
@@ -167,9 +168,8 @@ xml_resolver_version=1.1
 xml_parser_apis_version=2.2.1
 xmlbeans_version=1.0-DEV
 xmlpull_version=1.1.3.4d_b4_min
-xstream_version=1.0.2
 xpp3_version=1.1.3.3
-wsdl4j_version=1.4
+xstream_version=1.0.2
 
 #####################################################
 # Site Colors
