--- a/etc/project.properties
+++ b/etc/project.properties
@@ -138,7 +138,7 @@ javacc_version=2.1
 jaxb_ri_version=SNAPSHOT
 jdbm_version=0.20-dev
 jelly_velocity_tags_version=1.0
-jetty_version=5.1.3-G-SNAPSHOT
+jetty_version=5.1.3
 jmock_version=1.0.1
 jrms_version=1.1
 juddi_version=SNAPSHOT
