--- a/modules/spring-builder/project.properties
+++ b/modules/spring-builder/project.properties
@@ -4,7 +4,7 @@
 
 # the directory containing the geronimo website in CVS
 
-maven.repo.remote=http://www.apache.org/~jboynes, http://www.mortbay.org/maven, http://www.openejb.org/maven, http://dist.codehaus.org, http://www.ibiblio.org/maven, http://www.apache.org/dist/java-repository/
+maven.repo.remote=http://people.apache.org/~jboynes, http://www.mortbay.org/maven, http://www.openejb.org/maven, http://dist.codehaus.org, http://www.ibiblio.org/maven, http://www.apache.org/dist/java-repository/
 
 maven.junit.jvmargs=-Djava.security.auth.login.config=src/test-resources/data/login.config -ea
 maven.junit.fork=true
