--- a/specs/corba/project.properties
+++ b/specs/corba/project.properties
@@ -1,5 +1,5 @@
 ##
 ## $Rev: 47137 $ $Date: 2004-09-24 00:04:29 -0700 (Fri, 24 Sep 2004) $
 ##
-maven.idea.generated.source=src
+maven.idea.generated.source=idl
 
