new build system
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@164088 13f79535-47bb-0310-9956-ffa450edef68

--- a/plugins/geronimo-packaging-plugin/project.properties
+++ b/plugins/geronimo-packaging-plugin/project.properties
@@ -25,3 +25,5 @@ maven.compile.target=1.4
 # use personal repo at Apache until we are prepared to release this
 maven.repo.remote=http://people.apache.org/~jboynes, http://www.ibiblio.org/maven
 
+maven.multiproject.type=plugin
+
