--- a/plugins/maven-xpom-plugin/project.properties
+++ b/plugins/maven-xpom-plugin/project.properties
@@ -7,3 +7,6 @@ maven.compile.target=1.4
 maven.compile.deprecation=true
 maven.compile.debug=true
 maven.compile.optimize=true
+
+maven.multiproject.type=plugin
+
