Switching to released activeio
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@164282 13f79535-47bb-0310-9956-ffa450edef68

--- a/etc/project.properties
+++ b/etc/project.properties
@@ -68,7 +68,7 @@ geronimo_kernel_version=1.0-SNAPSHOT
 geronimo_system_version=1.0-SNAPSHOT
 
 # actual dependencies
-activeio_version=1.0-SNAPSHOT
+activeio_version=1.0
 activemq_version=3.0-SNAPSHOT
 geronimo_version=1.0-SNAPSHOT
 openejb_version=2.0-SNAPSHOT
