Support for Engine, Host, Connector, and Realms
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@164653 13f79535-47bb-0310-9956-ffa450edef68

--- a/modules/tomcat/src/test-resources/deployables/war3/WEB-INF/web.xml
+++ b/modules/tomcat/src/test-resources/deployables/war3/WEB-INF/web.xml
@@ -52,7 +52,7 @@
 
     <login-config>
         <auth-method>FORM</auth-method>
-        <realm-name>Test JAAS Realm</realm-name>
+        <realm-name>geronimo-properties-realm</realm-name>
         <form-login-config>
             <form-login-page>/auth/logon.html?param=test</form-login-page>
             <form-error-page>/auth/logonError.html?param=test</form-error-page>
