Added Commons-IO 1.0
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@164682 13f79535-47bb-0310-9956-ffa450edef68

--- a/etc/project.properties
+++ b/etc/project.properties
@@ -116,6 +116,7 @@ commons_collections_version=2.1
 commons_dbcp_version=1.2
 commons_digester_version=1.6
 commons_el_version=1.0
+commons_io_version=1.0
 commons_fileupload_version=1.0
 commons_httpclient_version=2.0.1
 commons_jelly_version=1.0-beta-4
