try to fix deploy location for buildall script
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@164744 13f79535-47bb-0310-9956-ffa450edef68

--- a/plugins/maven-xmlbeans-plugin/project.properties
+++ b/plugins/maven-xmlbeans-plugin/project.properties
@@ -14,3 +14,8 @@
 
 maven.multiproject.type=plugin
 
+maven.remote.group=apcvs
+maven.username=${user.name}
+maven.repo.central=apache.org
+maven.repo.central.directory=/www/cvs.apache.org/repository
+
