--- a/applications/project.properties
+++ b/applications/project.properties
@@ -26,6 +26,7 @@ maven.multiproject.excludes=\
 maven.idea.project.multiproject.includes=${maven.multiproject.includes}
 maven.idea.project.multiproject.excludes=${maven.multiproject.excludes}
 
+maven.remote.group=apcvs
 maven.username=${user.name}
 maven.repo.central=apache.org
 maven.repo.central.directory=/www/cvs.apache.org/repository
