--- a/modules/project.properties
+++ b/modules/project.properties
@@ -27,6 +27,7 @@ assembly/project.xml
 maven.idea.project.multiproject.includes=${maven.multiproject.includes}
 maven.idea.project.multiproject.excludes=${maven.multiproject.excludes}
 
+maven.remote.group=apcvs
 maven.username=${user.name}
 maven.repo.central=apache.org
 maven.repo.central.directory=/www/cvs.apache.org/repository
