--- a/etc/project.properties
+++ b/etc/project.properties
@@ -158,7 +158,7 @@ stax_version=1.1.1-dev
 stax_api_version=1.0
 tomcat_version=5.5.9
 velocity_version=1.4
-wsdl4j_version=1.5
+wsdl4j_version=PATCH-1193602
 xerces_version=2.6.2
 xfire_version=20050202
 xml_apis_version=1.0.b2
