update dependency versions
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@169141 13f79535-47bb-0310-9956-ffa450edef68

--- a/etc/project.properties
+++ b/etc/project.properties
@@ -99,8 +99,7 @@ activemq_jetty_version=4.2.20RC0
 ant_version=1.5
 antlr_version=2.7.2
 axion_version=1.0-M3-dev
-axis_version=PATCH-JIRA1974
-axis_commons_discovery_version=SNAPSHOT
+axis_version=1.2.1-SNAPSHOT
 avalon_framework_version=4.1.4
 avalon_logkit_version=1.2.2
 bouncycastle_version=jdk14-124
@@ -112,6 +111,7 @@ commons_cli_version=1.0
 commons_collections_version=2.1
 commons_dbcp_version=1.2
 commons_digester_version=1.6
+commons_discovery_version=SNAPSHOT
 commons_el_version=1.0
 commons_io_version=1.0
 commons_fileupload_version=1.0
