--- a/plugins/geronimo-packaging-plugin/project.properties
+++ b/plugins/geronimo-packaging-plugin/project.properties
@@ -22,8 +22,7 @@
 maven.compile.source=1.4
 maven.compile.target=1.4
 
-# use personal repo at Apache until we are prepared to release this
-maven.repo.remote=http://people.apache.org/~jboynes, http://www.ibiblio.org/maven
+maven.repo.remote=http://cvs.apache.org/repository, http://www.ibiblio.org/maven
 
 maven.multiproject.type=plugin
 
