--- a/etc/project.properties
+++ b/etc/project.properties
@@ -155,6 +155,7 @@ scout_version=1.0-SNAPSHOT
 spring_version=1.1.3
 stax_version=1.1.1-dev
 stax_api_version=1.0
+tomcat_jk2_version=5.0.18
 tomcat_version=5.5.9
 velocity_version=1.4
 wsdl4j_version=PATCH-1193602
