Added cvs.apache.org to the repo list so derby jars can be downloaded
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@179694 13f79535-47bb-0310-9956-ffa450edef68

--- a/modules/assembly/project.properties
+++ b/modules/assembly/project.properties
@@ -5,7 +5,7 @@
 # the directory containing the geronimo website in CVS
 
 geronimo.cvs.docdir = ../incubator-site/build/site/projects/geronimo
-maven.repo.remote= http://www.mortbay.org/maven, http://www.openejb.org/maven, http://dist.codehaus.org, http://www.ibiblio.org/maven 
+maven.repo.remote=http://cvs.apache.org/repository, http://www.mortbay.org/maven, http://www.openejb.org/maven, http://dist.codehaus.org, http://www.ibiblio.org/maven 
 
 # Uncomment this line to use the deployer offline.
 # This is slower and doesn't check that the runtime deployer works,
