Centeralize the maven.repo.remote list into the global project.properties file
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@179736 13f79535-47bb-0310-9956-ffa450edef68

--- a/etc/project.properties
+++ b/etc/project.properties
@@ -25,7 +25,11 @@
 # Build and Deployment
 #####################################################
 
-#maven.repo.remote=http://tranql.codehaus.org/maven,http://www.openejb.org/maven,http://www.ibiblio.org/maven
+maven.repo.remote=\
+http://cvs.apache.org/repository,\
+http://dist.codehaus.org,\
+http://www.mortbay.org/maven,\
+http://www.ibiblio.org/maven
 
 maven.remote.group=apcvs
 
