--- a/etc/project.properties
+++ b/etc/project.properties
@@ -108,7 +108,7 @@ axis_version=1.2.1-SNAPSHOT
 avalon_framework_version=4.1.4
 avalon_logkit_version=1.2.2
 bouncycastle_version=jdk14-124
-cglib_version=2.1
+cglib_version=HEAD-06-06-05
 castor_version=0.9.5.3
 commons_beanutils_version=1.6.1
 commons_cli_version=1.0
