--- a/etc/project.properties
+++ b/etc/project.properties
@@ -172,6 +172,8 @@ xmlbeans_version=1.0-DEV
 xmlpull_version=1.1.3.4d_b4_min
 xpp3_version=1.1.3.3
 xstream_version=1.0.2
+servicemix_version=1.0-SNAPSHOT
+servicemix_spring_version=1.2.2-dev-2
 
 #####################################################
 # Site Colors
