--- a/modules/axis-builder/project.properties
+++ b/modules/axis-builder/project.properties
@@ -2,9 +2,10 @@
 ## $Rev: 46019 $ $Date: 2004-09-14 02:56:06 -0700 (Tue, 14 Sep 2004) $
 ##
 
-#maven.eclipse.classpath.include=target/xmlbeans
-#maven.idea.generated.source=xmlbeans
+maven.eclipse.classpath.include=target/xmlbeans
+maven.idea.generated.source=xmlbeans
 
 maven.junit.sysproperties=geronimo.run.external.webservicetest
 #Set to true to run test against bea's web service interop server.
 #geronimo.run.external.webservicetest=true
+
