add jUDDI server into default assembly
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@209551 13f79535-47bb-0310-9956-ffa450edef68

--- a/modules/assembly/project.properties
+++ b/modules/assembly/project.properties
@@ -17,3 +17,5 @@ geronimo.assemble.delete.logs=true
 #controls whether to remove previous versions even if clean was not explicitly called
 geronimo.assemble.clean=true
 #geronimo.assemble.minimal=true
+
+derby.system.home=${maven.build.dir}/${pom.groupId}-${pom.currentVersion}/var/derby
