--- a/etc/project.properties
+++ b/etc/project.properties
@@ -168,7 +168,8 @@ xfire_version=20050202
 xml_apis_version=1.0.b2
 xml_resolver_version=1.1
 xml_parser_apis_version=2.2.1
-xmlbeans_version=1.0-DEV
+xmlbeans_version=2.0.0
+xmlbeans_maven_plugin_version=2.0.0-beta1
 xmlpull_version=1.1.3.4d_b4_min
 xpp3_version=1.1.3.3
 xstream_version=1.0.2
