Make Geronimo M4 branch use the version 1.0-M4-SNAPSHOT and build with   the OpenEJB G1M4 branch
git-svn-id: https://svn.apache.org/repos/asf/geronimo/branches/v1_0_M4-QA@219066 13f79535-47bb-0310-9956-ffa450edef68

--- a/etc/project.properties
+++ b/etc/project.properties
@@ -68,14 +68,14 @@ maven.javadoc.source=1.4
 #####################################################
 
 # hack to work with activemq
-geronimo_kernel_version=1.0-SNAPSHOT
-geronimo_system_version=1.0-SNAPSHOT
+#geronimo_kernel_version=1.0-SNAPSHOT
+#geronimo_system_version=1.0-SNAPSHOT
 
 # actual dependencies
 activeio_version=1.0
 activemq_version=3.1-SNAPSHOT
-geronimo_version=1.0-SNAPSHOT
-openejb_version=2.0-SNAPSHOT
+geronimo_version=1.0-M4-SNAPSHOT
+openejb_version=2.0-G1M4-SNAPSHOT
 tmporb_version=1.0-SNAPSHOT
 tranql_version=1.0-20050713
 tranql_connector_version=1.0-SNAPSHOT
