--- a/etc/project.properties
+++ b/etc/project.properties
@@ -68,15 +68,15 @@ maven.javadoc.source=1.4
 #####################################################
 
 # hack to work with activemq
-geronimo_kernel_version=1.0-SNAPSHOT
-geronimo_system_version=1.0-SNAPSHOT
+#geronimo_kernel_version=1.0-SNAPSHOT
+#geronimo_system_version=1.0-SNAPSHOT
 
 # actual dependencies
 activeio_version=1.0
 activemq_version=3.1-SNAPSHOT
 geronimo_version=1.0-SNAPSHOT
 openejb_version=2.0-SNAPSHOT
-tranql_version=1.0-SNAPSHOT
+tranql_version=1.0-20050713
 tranql_connector_version=1.0-SNAPSHOT
 
 geronimo_spec_activation_version=1.0.2-SNAPSHOT
