--- a/etc/project.properties
+++ b/etc/project.properties
@@ -77,7 +77,7 @@ activemq_version=3.1-SNAPSHOT
 geronimo_version=1.0-SNAPSHOT
 openejb_version=2.0-SNAPSHOT
 tranql_version=1.0-20050713
-tranql_connector_version=1.0-SNAPSHOT
+tranql_connector_version=1.0-20050716
 
 geronimo_spec_activation_version=1.0.2-SNAPSHOT
 geronimo_spec_corba_version=2.3-rc4
