Dated TranQL connector for M4
git-svn-id: https://svn.apache.org/repos/asf/geronimo/branches/v1_0_M4-QA@219371 13f79535-47bb-0310-9956-ffa450edef68

--- a/etc/project.properties
+++ b/etc/project.properties
@@ -78,7 +78,7 @@ geronimo_version=1.0-M4-SNAPSHOT
 openejb_version=2.0-G1M4-SNAPSHOT
 tmporb_version=1.0-SNAPSHOT
 tranql_version=1.0-20050713
-tranql_connector_version=1.0-SNAPSHOT
+tranql_connector_version=1.0-20050716
 
 geronimo_spec_activation_version=1.0.2-SNAPSHOT
 geronimo_spec_corba_version=2.3-rc4
