Added container selection property
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@219405 13f79535-47bb-0310-9956-ffa450edef68

--- a/etc/project.properties
+++ b/etc/project.properties
@@ -47,6 +47,12 @@ maven.checkstyle.properties=etc/geronimo_checks.xml
 
 maven.war.final.name=${pom.artifactId}-${pom.currentVersion}.war
 
+#####################################################
+# Web Container (jetty or tomcat)
+#####################################################
+#geronimo.web.container=tomcat
+geronimo.web.container=jetty
+
 # Force module tests to run, even if maven thinks they have passed
 #maven.test.force=true
 
