It's much better now:
 svn -R propset svn:keywords 'Rev Date' .




git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@219424 13f79535-47bb-0310-9956-ffa450edef68

--- a/modules/tomcat/src/var/ROOT/WEB-INF/web.xml
+++ b/modules/tomcat/src/var/ROOT/WEB-INF/web.xml
@@ -14,7 +14,7 @@
   See the License for the specific language governing permissions and
   limitations under the License.
 -->
-<!-- $Rev: 54661 $ $Date$ -->
+<!-- $Rev$ $Date$ -->
 <web-app xmlns="http://java.sun.com/xml/ns/j2ee"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
