GERONIMO-758 : Move geronimo_spec_activation version from 1.0.2-SNAPSHOT to 1.0.2-rc4
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@219438 13f79535-47bb-0310-9956-ffa450edef68

--- a/etc/project.properties
+++ b/etc/project.properties
@@ -85,7 +85,7 @@ openejb_version=2.0-SNAPSHOT
 tranql_version=1.0-20050713
 tranql_connector_version=1.0-20050716
 
-geronimo_spec_activation_version=1.0.2-SNAPSHOT
+geronimo_spec_activation_version=1.0.2-rc4
 geronimo_spec_corba_version=2.3-rc4
 geronimo_spec_ejb_version=2.1-rc4
 geronimo_spec_j2ee_version=1.4-rc4
