GERONIMO-771 Move from custom cglib build version HEAD-06-06-05 to cglib-nodep-2.1_2.jar
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@219982 13f79535-47bb-0310-9956-ffa450edef68

--- a/etc/project.properties
+++ b/etc/project.properties
@@ -103,7 +103,7 @@ asm_version=1.4.3
 axion_version=1.0-M3-dev
 axis_version=1.3-SNAPSHOT
 bouncycastle_version=jdk14-124
-cglib_version=HEAD-06-06-05
+cglib_version=2.1_2
 castor_version=0.9.5.3
 commons_beanutils_version=1.6.1
 commons_cli_version=1.0
