GERONIMO-784 and refactor xmlbeans2 plugin for move to xmlbeans
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@219994 13f79535-47bb-0310-9956-ffa450edef68

--- a/etc/project.properties
+++ b/etc/project.properties
@@ -68,6 +68,11 @@ maven.linkcheck.enable=true
 maven.javadoc.links=http://java.sun.com/j2se/1.4.1/docs/api/
 maven.javadoc.source=1.4
 
+#####################################################
+# Where xmlbeans2 will copy source schemas
+#####################################################
+maven.xmlbeans2.baseSchemaLocation=META-INF
+maven.xmlbeans2.sourcedir=${basedir}/src
 
 #####################################################
 # Dependency Version
