--- a/plugins/maven-xmlbeans2-plugin/project.properties
+++ b/plugins/maven-xmlbeans2-plugin/project.properties
@@ -1,4 +1,4 @@
-#    Copyright 2004 The Apache Software Foundation
+#    Copyright 2003-2005 The Apache Software Foundation
 #
 #    Licensed under the Apache License, Version 2.0 (the "License");
 #    you may not use this file except in compliance with the License.
@@ -13,4 +13,16 @@
 #    limitations under the License.
 
 maven.multiproject.type=plugin
+
+maven.repo.central=apache.org
+maven.repo.central.directory=/www/cvs.apache.org/repository
+
+maven.remote.group=apcvs
+
+maven.compile.source=1.4
+maven.compile.target=1.4
+#maven.compile.deprecation=true
+maven.compile.debug=true
+maven.compile.optimize=true
+
 
