--- a/etc/project.properties
+++ b/etc/project.properties
@@ -66,17 +66,11 @@ maven.javadoc.source=1.4
 #####################################################
 # Dependency Version
 #####################################################
-
-# hack to work with activemq
-#geronimo_kernel_version=1.0-SNAPSHOT
-#geronimo_system_version=1.0-SNAPSHOT
-
-# actual dependencies
-activeio_version=1.0
-activemq_version=3.1-SNAPSHOT
+asm_version=1.4.3
+activeio_version=1.1
+activemq_version=3.1-M5
 geronimo_version=1.0-M4-SNAPSHOT
 openejb_version=2.0-G1M4-SNAPSHOT
-tmporb_version=1.0-SNAPSHOT
 tranql_version=1.0-20050713
 tranql_connector_version=1.0-20050716
 
@@ -98,11 +92,8 @@ geronimo_spec_saaj_version=1.1-rc4
 geronimo_spec_servlet_version=2.4-rc4
 geronimo_spec_qname_version=1.1-rc4
 
-activecluster_version=1.0-SNAPSHOT
-activemq_jetty_version=4.2.20RC0
 ant_version=1.5
 antlr_version=2.7.2
-asm_version=1.4.3
 axion_version=1.0-M3-dev
 axis_version=1.3-SNAPSHOT
 avalon_framework_version=4.1.4
@@ -115,7 +106,7 @@ commons_cli_version=1.0
 commons_collections_version=3.1
 commons_dbcp_version=1.2
 commons_digester_version=1.6
-commons_discovery_version=SNAPSHOT
+commons_discovery_version=0.2
 commons_el_version=1.0
 commons_io_version=1.0
 commons_fileupload_version=1.0
@@ -129,25 +120,19 @@ commons_pool_version=1.2
 concurrent_version=1.3.4
 derby_version=10.0.2.1
 dom4j_version=1.4
-drools_version=2.0-beta-13
 eclipse_compiler_version=3.0.1
-emberio_version=0.3-alpha
 howl_version=0.1.8
+#security:
 hsqldb_version=1.7.2.2
 jasper_version=5.5.9
 javacc_version=2.1
-jaxb_ri_version=SNAPSHOT
-jdbm_version=0.20-dev
 jelly_velocity_tags_version=1.0
 jetty_version=5.1.4
-jmock_version=1.0.1
-jrms_version=1.1
 juddi_version=SNAPSHOT
 junit_version=3.8.1
-jxta_version=2.0
 log4j_version=1.2.8
 maven_itest_plugin_version=1.0
-maven_version=1.0
+maven_version=1.0.2
 mockobjects_version=0.09
 mx4j_version=3.0.1
 openorb_version=1.4.0-GERONIMO
@@ -155,9 +140,12 @@ oro_version=2.0.8
 p2psockets_version=1.1.2
 regexp_version=1.3
 scout_version=1.0-SNAPSHOT
+servicemix_spring_version=1.2.2-dev-2
+servicemix_version=1.0-SNAPSHOT
 spring_version=1.1.3
 stax_version=1.1.1-dev
 stax_api_version=1.0
+tmporb_version=1.0-SNAPSHOT
 tomcat_ajp_version=5.5.9
 tomcat_version=5.5.9
 velocity_version=1.4
@@ -171,8 +159,6 @@ xmlbeans_version=1.0-DEV
 xmlpull_version=1.1.3.4d_b4_min
 xpp3_version=1.1.3.3
 xstream_version=1.0.2
-servicemix_version=1.0-SNAPSHOT
-servicemix_spring_version=1.2.2-dev-2
 
 #####################################################
 # Site Colors
